@@ -4,20 +4,16 @@ AUX gitlab-shell-4.1.1-config-paths.patch 2152 SHA256 e789f0c8a8b7ec8a840ce26dd6
 DIST gitlab-shell-5.0.0.tar.gz 78585 SHA256 7611fdf0b64592365bdb6ba442a4263d129b05c280d5105ea641baec7a0b45ab SHA512 84c86c42e0ff6029ddcdd9a93410b261f4f5a1e8cdb0fd114db2eab56b1fc63f4f8ed6d0cc0c6016d0f02413d6d213aab7a995adadb186c0dfe49e49b762e904 WHIRLPOOL ddaf25f837dbbdbfd6578062b89a8102ffbe0dc88f51890a38f59add61653368b0ad0ea146a8a7eac52fa482f7316aae712f53075f750db02fa8e8ce370f76e6
 DIST gitlab-shell-5.0.2.tar.gz 79009 SHA256 bb5125f12f2f3fbbb93aa78f6810cd62f97bda564d01112a831bf41d4e42ef34 SHA512 c960e1e2c3c9f35927255442f4e20b82af8881d123c3edeffe7ebdc6523fe2456ae1e7149527255eb5e3d2d369b4f70b7c902314d881a20b893fea9fac968f73 WHIRLPOOL dc5be75f111074c8e9f018533ddcef64edcded4c5f3003a3f7297d9153469894f4c8a3e387419055a3e51732daa9db8a3b936984a24f3b4d1a9e0cbc968a7119
 DIST gitlab-shell-5.0.4.tar.gz 626142 SHA256 9947c9cf7e7f2e1c2af696cf4610c6e2ad256dcae42e95cc0c8dc387ad5d07e3 SHA512 2718e99a43ad934dfb6d8b3df47bab0b957fa362c84510434fdd07ed994bf53ab059569ff0da106c8bd5ebc49cc460694ad5fb2fec57f0fb0cbb297609a00d97 WHIRLPOOL 6666d2dcb06c156686080b6a0f489ef03d331bc8f20eeb996fe5ce51aeb25d2f334002c15e235c1ad21d808eee8617aa178a5ad974ea99ec8f89bd2478f7f9eb
-DIST gitlab-shell-5.0.5.tar.gz 682091 SHA256 c1583e931280e93d59f86a571a628e697d8d073dbfbfd58fa957617581c4edae SHA512 8e22a2bed622c81976b827fac81ca94de7023d710160cb6daa24d24269b068292ee2e36a5917bb5399340661a28f6480ac40c0a5253f71bd36b8bd78a56c7380 WHIRLPOOL 76503debe3baeded25067b6fcc1c9b5f103a7fb21035521bc3ab8b89547a566b557f38c073deb7d8a0867f1225edfe4d5587d14570ca2889812d3da73b4bf5c9
 DIST gitlab-shell-5.1.1.tar.gz 688960 SHA256 33a4b79b0b06ad935a4bcf1ad41ab88882eb31b349cca007f1e60f3eb5826a06 SHA512 a247e37bfd7b8fe28fe68f3b9d401ccfe534bd4221bce2cda092f6a72a6926f49944f4a008c71636426ca1f7ae6033f53035bc10a8d8121c8093e09abfc675f4 WHIRLPOOL 29aaa30c73997a28cdb68485087a36c6c8109b9f909e2776899f1094a17dcbc6189ed759f9acc81caa6cda516b44f89ad36567bd9f96ec6802e4553182607e20
 DIST gitlab-shell-5.3.1.tar.gz 708811 SHA256 989e7976c56d09d455e5e67e587426be2aca71ef2e27541c8654e74aac82f68c SHA512 00c6dde3d7a59c956396988b2f5790291c44fe134812588ab5c03e7612d49c08de2f5fd08a8b4a55a2c95a46db1d0cdb0e07469958d5c0d6c778d0f9dd279afc WHIRLPOOL 266218edb547e2e7fab95982f78d5c2a7057e061a48a854697949214791dab512f4512a57197ce1ac901dd2b97f4e363a39b8cd2ac74f5cb002ffdc38b8fd06a
-DIST gitlab-shell-5.4.0.tar.gz 713393 SHA256 2c778f559617a63911fbc9fdb531d0cd2266b56eb2d3c8533f455312aa185eb0 SHA512 81991ee212f5babfe5217aa14afbf2cdc3aee6e3b44418c6262632fbadaf97eecf0688537e602b4cd297881134f789b57475c9a43a85b57ab00b3feebf6dca71 WHIRLPOOL da193bcbccfe8248a90fd5c6a1d1df61bfe9ec045a8a3cb6a83660f9fa74b6b7e0f23cf96629cd8e7477dcfda4ad0fb39ebe4395c58350f10eb9f9a765750d9d
 DIST gitlab-shell-5.8.0.tar.gz 718927 SHA256 7c6a02e12ec0efcca23b9200dc18be29a8ce2bf70f9802bb188fc22dbf1875d3 SHA512 f17e4ec95dce29608684de27d9a4f7a3fa69cd25fb68223576a4501ef83fc50bfb74668599672edc8c8d670585b47e22825004cba2227bb4ef6f0e3c27d06b59 WHIRLPOOL 941c5c9daf6e319e44c49af627474e87f33e964bbad0b59b84f90f7b7e8ca82b5f0635102964b9fd7b74f8101b6af6539aa966978468105ad9b004cb2fa76222
 DIST gitlab-shell-5.9.0.tar.gz 710920 SHA256 5085b531abd1c3ebbc73c7b77c05e674fe42d975c4d9c64bdc54704c51a15907 SHA512 e89a0f2b97e502b003ee62eacfa520dc248b93cf68a0d2eabae5672ee968ca68fd01839c9195422fb680e341756ec399af0a7654fc4e6fbe7d12f3af3643d2c6 WHIRLPOOL 45bd1f044314de3d093fb6689b5c50ca9243aa097e54f75e15485eda6504ab91975a5e8c4df115a94dfe228d98923ebc5f68e85eb050a95fd71f5927d5a89354
 EBUILD gitlab-shell-5.0.0.ebuild 3653 SHA256 346718615330cb98f84556a65fbac2561c14fab6ed22a42d4fa6cbcb651faa98 SHA512 390c922cc1eebd3dd7fa10e94b58a61a2d7363e19b59cffbd54be40c6fee60a894487c168b42294af5bae772d94c687dd14edf48c50c43696a52e4c8db87088c WHIRLPOOL 1278ab21caa8385e21976bed117ac1428ea2ed08576e20f58c7337ab8e8d565c4bf4742895458373878f19dfc48924f808bb4950303f48ce17af216f797f885a
 EBUILD gitlab-shell-5.0.2.ebuild 3653 SHA256 0af6f31c8d068612d618ec4d5959e06e78cd867dfb994079793fb2041803663f SHA512 65eac38adc73d5bec64bb95214a0c9599a72d51b6e4c766881b39087afc0b72b4180fad30b7ee5f46e85949a2d52956475db7b8d52976a12bae7d51681e140e1 WHIRLPOOL 8d406881dfd71e0b3b9168f3fd23766a04dfeecfdf668de9e3298a5650333c851feb6702c8f2134cfe683fd280369481cd53896ec95d1b89f4f9a92d89eb3f7b
 EBUILD gitlab-shell-5.0.4.ebuild 3653 SHA256 8e235cbe5a233e0382aadb466ee130c8b76bc3474fdfe175bf27a38d2cb975a0 SHA512 16e3a82a9705dd525fb24d3cb3981c12c2dbf3f944055570b1299cfcd67ad480c3ad69068c4347c61274003c20908bf2918a336d80c7a5148df5418fd1524d8a WHIRLPOOL edab6e46dc3af776db143be3a0009917f55fdcd01528c746bfa69b7acb0135d9880387e46653c31b5a04c60d6aee51efd7773aa2403e1cf0142d4a3e4a380835
-EBUILD gitlab-shell-5.0.5.ebuild 3646 SHA256 6ccddb217f38775da4165ffd595965b81724565317615b3ff824d8754aeada13 SHA512 18cd05520e0310384fdd662db00e0ae4c7dd9283b32553ec06493a1ab2fbed64207a9664d7130dab5343aa3e8fc2246e8560949e84327a7ac1c99ab637e857fa WHIRLPOOL f577a12fee7f171804eff6e79d43f6ac5f19e0166487536704197e645ff3467a9b7e791b1ee78c38054d74ceff76337bc546f5f132acc993b8aaf58ca830a95c
 EBUILD gitlab-shell-5.1.1.ebuild 3888 SHA256 9e7c878a166555bdd6c14d1be5929b0363eabe4352073db46e84905937323169 SHA512 4bb335f810619f813e84a20a0861ab3e1fdff1134b829f55bd209e70fcfb43fdac96b9fe011aed1a031b6674518c8b36be13d8fb7c8f9ea9cbc3335e3f0b1edc WHIRLPOOL 0285dacb4e03ede570ed4c5d07153d0c7835e91d7dc7742064021c92ec8d2d04ffc9a6d2baf533f86edf4bd18337658a96297918e38ff6c81ee2291284e9a237
 EBUILD gitlab-shell-5.3.1.ebuild 3888 SHA256 7075b271eeee6da9a8bd9f9e5aaf9c0c9612ab2d27f8399df32628e7bde53fa2 SHA512 b7c567e262e23fdb9f6845b141aa4157d31b86ce115e305f56f30e1673dcd9cb1a4dce82f45a4139ff47008c9072cc743d76f00ab92f4d9fa869dcf4ecd26cc4 WHIRLPOOL e3efacb596afb62d21feffa26e7c2b2947a03e742a55edd1d4f60746395ab6edd636824d14f937d3e66003fdec9b168ebb80ba31a34e9ee6faf8964cca8839e7
-EBUILD gitlab-shell-5.4.0.ebuild 3888 SHA256 3e66c555e3d1f7a8e9cdacd615917014329b42a12fd8f7d74faa01493bd77add SHA512 e2d6afbce2906462943b3405b386ab92a8f6529790de206806b7cddd0d0425fd2fca06ff9a76218323bb6f2bc9b08175677c97e9d111e28af995636acca3bbbc WHIRLPOOL 9889b9cdf7bd3f0d2109cc4c6e6873c0bdb424977537a404afe92935a9a831f81d1a4dec18133668d9f4625e29e60990ac065e7b521b80fa124eec4704b9a65d
 EBUILD gitlab-shell-5.8.0.ebuild 3907 SHA256 fe1bd700fc6964e69296160da0c75dd5193f6a999e6a985b179ddd7587a96560 SHA512 fe3e0c31daed0cdad9beeb9e45c4002b036475db53aed54a8cdfc54363452ec61ec53ada8116b6c4cfdf333678263a552541c59205fb92b47a5c882b70b0ae2a WHIRLPOOL 55a81924b0b8bc81d3e8726ac0a2422245cb83d095643e80564c4e4f81dc2ebbf11218cdf545953f304e44f1c13d1846216eabb4ad6810edcbc2dffc93692707
 EBUILD gitlab-shell-5.9.0.ebuild 3907 SHA256 ef0ff5dad7b058e19c967c4757654133499d13f3a6eb67f1d9f28edde3e554cf SHA512 485d0c228310a4a69810d2370c8c1d57caa004442c5fa3103b4f889d501091c87bd24e440f41b32d1ca5d405f8e0df14568898cfd9b1bbe0bebae388f7c1817b WHIRLPOOL 1649b36d912bc6f56eff4c6fc1d7fc035f740e80f8e467d7b8e3860d12f7b07e82b5a4c4a0cf718ab3a22ff58359f8a1d600d6f3c68e021bb06e743869105df3
-MISC ChangeLog 4642 SHA256 7c2373e5fe2fa0d8280f47860f87de57f27027bf909618b83dc5cf0c6d80bf13 SHA512 c6a2453ef78a7250d0cf50e71ea8830f0230d2bad15f48b2c539052f4f20bd9db0c680caaa25ee56b3caa70ea2f11be269dfbfa38ff69dbcda16f43439890352 WHIRLPOOL 1b8478982fbd018de5ae4822cfd0aa6328e90d58ee12572af41580d3a4ec2f022115a0261cb7724848648f9938bbf1f3f0430e94488da43267632e607a053f2d
+MISC ChangeLog 4802 SHA256 353b8a710e93fe3e570df73ebc982e68a2371226cabdc8ad306a5a6ce8221e5f SHA512 374bd0fb1e95c8277e23d2ba5719595df7afbbce7b5acc978d35dd6cf7780582a9e4075bcb0e4df0ef87eaaf67d2d736d0c023512a6c54e3e267f3f9417fa063 WHIRLPOOL 667835a6bc140d20cf61c9b1eec3a9c96fd99aa5d70edf769f664e73fe2146a00497c3eec9683bf27df4be2dddca2218c2c5adf0e80118bebf14dea0d35b3c37
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
